# gcompris

./: .gitignore  ChangeLog  ChangeLog.pregit  HOWTO_ENCODE  INSTALL  MAINTAINERS  Makefile.am  Makefile.mingw  Makefile.mingw.in  NEWS  README.mingw  README.translators  config.h.mingw.in  configure.ac  configure.in  create_dist_sounds  cross-configure.sh  gcompris-edit.desktop.in  gcompris-installer.nsi.in  gcompris.doap  gcompris.spec.in  global_win32.mak  nsis_translations.desktop.in
autopackage/: default.apspec.in
boards/: Makefile.am  babyshapes.xml.in  chess_computer.xml.in  chess_movelearn.xml.in  chess_partyend.xml.in  click_on_letter.xml.in  doubleclick.xml.in  erase_doubleclick.xml.in  geography.xml.in  geography_country.xml.in  magic_hat.xml.in  melody.xml.in  mosaic.xml.in  pythontest.xml.in  writing_tutor.xml.in  writing_tutor_template_match.xml.in
boards/anim/: animation.js
boards/babymatch/: Makefile.am
boards/babyshapes/: Makefile.am  board8_0.xml.in  board8_1.xml.in  board8_2.xml.in  board8_3.xml.in  board8_4.xml.in
boards/chronos/: Makefile.am  board4_3.xml.in
boards/dataset/: user_pictures.xml
boards/doubleentry/: Makefile.am  board3_0.xml.in
boards/geography/: Makefile.am
boards/geography_country/: Makefile.am  board7_0.xml.in  board8_0.xml.in  board9_0.xml.in
boards/imagename/: Makefile.am
boards/missing_letter/: Makefile.am  board1.xml.in  board2.xml.in  board3.xml.in  board4.xml.in
boards/paintings/: Makefile.am
boards/sounds/: README
boards/wordsgame/: default-fr.xml
docs/: .gitignore  create_thumbnails.pl  gcompris2spip.pl  spip_oneboard.xsl  spip_screenshot_remove.pl
docs/C/: python.html  python.xml
docs/eu/: Makefile.am
docs/fr/: Makefile.am
libccc/0.0.4/: ChangeLog  Makefile  cc-config.h  config.status  libtool  stamp-h1
libccc/current/: Makefile.in  aclocal.m4  cc-config.h.in  ccc.pc  configure
nsis/: langmacros.nsh
nsis/translations/: albanian.nsh  bulgarian.nsh  catalan.nsh  czech.nsh  danish.nsh  dutch.nsh  english.nsh  finnish.nsh  french.nsh  german.nsh  hebrew.nsh  hungarian.nsh  italian.nsh  japanese.nsh  korean.nsh  norwegian.nsh  polish.nsh  portuguese-br.nsh  portuguese.nsh  romanian.nsh  russian.nsh  serbian-latin.nsh  simp-chinese.nsh  slovak.nsh  slovenian.nsh  spanish.nsh  swedish.nsh  trad-chinese.nsh  vietnamese.nsh
po/: ChangeLog  POTFILES.in  POTFILES.skip  TRANSLATORS.README  af.po  am.po  ar.po  ar_TN.po  ast.po  az.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  lt.po  (+31 more)
src/: Makefile.am  activity.info  bundleall.sh  bundleit.sh  runit.sh
src/advanced_colors-activity/: advanced_colors.c
src/awele-activity/: awele.c
src/babymatch-activity/: shapegame.c
src/boards/: Makefile.am  Makefile.mingw  advanced_colors.c  algebra.c  algebra_guesscount.c  animtest.c  awele.c  awele.h  awele_alphaBeta.c  awele_utils.c  awele_utils.h  canal_lock.c  canvas.c  chess.c  chess_makros.h  chess_notation.c  chess_notation.h  chess_windows.c  click_on_letter.c  clickgame.c  clockgame.c  colors.c  crane.c  enumerate.c  erase.c  fifteen.c  gletters.c  gtans.c  gtans_callbacks.c  hanoi.c  hanoi_real.c  imageid.c  leftright.c  machpuzzle.c  magic_hat.c  maze.c  memory.c  menu2.c  missingletter.c  missingletter_config.c  (+20 more)
src/braille_alphabets-activity/: braille_alphabets.py
src/chess_computer-activity/: chess.c
src/clockgame-activity/: Makefile.am
src/colors-activity/: colors.c
src/gc_sound/: ChangeLog  Makefile.am  aclocal.m4  configure.in  configure.in_ALONE
src/gc_sound/python/: Makefile.am  demo.py  gc_sound.defs  gc_sound.override  gc_sound_module.c
src/gc_sound/src/: Makefile.am  gc-sound-channel.c  gc-sound-channel.gob  gc-sound-channel.h  gc-sound-item.c  gc-sound-item.gob  gc-sound-item.h  gc-sound-marshallers.c  gc-sound-marshallers.h  gc-sound-mixer-SDL.c  gc-sound-mixer-SDL.h  gc-sound-mixer-private.h  gc-sound-mixer.c  gc-sound-mixer.gob  gc-sound-mixer.h  gc-sound-object.c  gc-sound-object.h  gc-sound.h  marshallers.list  test_gc_sound.c
src/gcompris/: Makefile.am  Makefile.mingw  about.c  about.h  anim.c  anim.h  bar.c  board.c  board.h  board_config.c  board_config.h  board_config_wordlist.c  bonus.c  bonus.h  cache.c  config.c  dbus.c  dialog.c  drag.c  drag.h  file_selector.c  gameutil.c  gameutil.h  gc_core.h  gc_net.c  gc_net.h  gcompris-board.h  gcompris.c  gcompris.c.realpath.patch  gcompris.h  gcompris_alphabeta.c  gcompris_alphabeta.h  gcompris_config.h  gcompris_confirm.c  gcompris_db.c  gcompris_db.h  gcompris_im.c  gcompris_im.h  help.c  images_selector.c  (+18 more)
src/geography_country-activity/: .gitignore
src/libart_lgpl/: .gitignore  Makefile.am  Makefile.mingw  art_affine.c  art_affine.h  art_alphagamma.c  art_alphagamma.h  art_bpath.c  art_bpath.h  art_filterlevel.h  art_gray_svp.c  art_gray_svp.h  art_misc.c  art_misc.h  art_pathcode.h  art_pixbuf.c  art_pixbuf.h  art_point.h  art_rect.c  art_rect.h  art_rect_svp.c  art_rect_svp.h  art_rect_uta.c  art_rect_uta.h  art_render.c  art_render.h  art_render_gradient.c  art_render_gradient.h  art_render_mask.c  art_render_mask.h  art_render_svp.c  art_render_svp.h  art_rgb.c  art_rgb.h  art_rgb_a_affine.c  art_rgb_a_affine.h  art_rgb_affine.c  art_rgb_affine.h  art_rgb_affine_private.c  art_rgb_affine_private.h  (+46 more)
src/libgnomecanvas/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.mingw  gnome-canvas-pixbuf.c  gnome-canvas-pixbuf.h  gnome-canvas-rich-text.c  gnome-canvas-rich-text.h
src/money-activity/: money.c
src/piano-activity/: Makefile.am  init_path.sh  piano.py  piano.xml.in
src/redraw-activity/: redraw.py
src/redraw_symmetrical-activity/: Makefile.am
src/rhymes-activity/: .gitignore  .rhymes.py.swp  Makefile.am  init_path.sh  rhymes.py  rhymes.xml.in
src/singalong-activity/: Makefile.am  (+4 more)
tools/: README_FULL_XO_BUNDLE.txt  check_missing_voices.pl  create_nsis_translations.pl  full-xo-bundle-add-on.tzf  gcompris_shapegame.py
(+315 files in other folders)
